# carlos_mission_control

./: .gitignore  README.md
carlos_emulators/: CMakeLists.txt  goals.yaml  package.xml  readme.txt
carlos_emulators/src/: arm_emulator.cpp  platform_emulator.cpp  prodisp_emulator.cpp  ui_emulator.cpp
mission_control/: .gitignore  CMakeLists.txt  package.xml  task_params_database.xml
mission_control/GUI/: GUImain.cpp  loadMission.hpp  loadMission.ui  mainwindow.cpp
mission_control/backup/: completed.yaml  configured_aimen.yaml  finished_mission_dummy.yaml  instructed.yaml  partially_completed.yaml  partially_instructed.yaml  valina_1.yaml  valina_instr_1.yaml  valina_test_2.yaml  valina_weld_test.yaml
mission_control/include/mission_control/: function_defines.h  ui_api_defines.h
mission_control/launch/: mission_controller.launch  test_all_emulators.launch  test_with_arm.launch  test_with_platform.launch  test_with_prodisp.launch
mission_control/mission_library/: completed.yaml  configured.yaml  instructed.yaml  instructed_dummy.yaml  mission_super_weld.yaml  partially_completed.yaml  partially_completed_aimen.yaml  partially_instructed.yaml
mission_control/mission_library/backup/: configured.yaml  instructed.yaml  partially_instructed.yaml
mission_control/msg/: DeviceState.msg  ExecProgress.msg  Function.msg  HardwareStates.msg  MissionData.msg  ParamDouble.msg  ParamInt.msg  ParamString.msg  Progress.msg  StudPattern.msg  TaskData.msg  uiMessage.msg
mission_control/src/: UI_API.cpp  UI_API.hpp  action_interface.cpp  action_interface.hpp  execution_engine.cpp  execution_engine.hpp  function_defines.hpp  gui_node.cpp  hw_state_machine.cpp  hw_state_machine.hpp  instruction_engine.cpp  instruction_engine.hpp  main.cpp  mission_controller_node.cpp  mission_handler.cpp  mission_handler.hpp  system_engine.cpp  system_engine.hpp
mission_control/src/GUI/: GUImain.cpp  GUImain.h  addTask.cpp  addTask.hpp  addTask.ui  loadMission.cpp  loadMission.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ros_interface.cpp  ros_interface.hpp
mission_control/srv/: createNewMission.srv  execAbort.srv  getMissionData.srv  getMissionList.srv  getMissionMetaData.srv  getTaskData.srv  getTaskList.srv  getTaskParams.srv  setMissionData.srv  setTaskData.srv
mission_control/temp_backup/: nav_goals_1.yaml  valina_instr_1.yaml  valina_instr_fire.yaml  valina_weld_test.yaml
mission_ctrl_msgs/: CMakeLists.txt  package.xml
mission_ctrl_msgs/action/: executeWeld.action  generateStudDistribution.action  moveArm.action  movePlatform.action  performTeaching.action  projectionPose.action
mission_ctrl_msgs/include/mission_ctrl_msgs/: mission_ctrl_defines.h
mission_ctrl_msgs/msg/: hardware_state.msg
mission_ctrl_msgs/srv/: GetMode.srv  SetMode.srv
